--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "marko": "^4.21.10"
+    "marko": "^4.21.10",
+    "sqlite3": "4.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
